feat: add edit and delete api for user permission of pertcular quiz (#421)
## Related Issues
#384
## Changes proposed
- feat: add edit and delete api for user permission of pertcular quiz

Reviewed-on: https://git.pride.improwised.dev/Improwised/quizz-app/pulls/421
Co-committed-by: AshvinBambhaniya2003 <ashvin.bambhaniya@improwised.com>
